schema/testdata/validation_get_operation_unique_lookup_in_wheres/schema.keel
model MyModel {
    fields {
        nonUnique Text
        code Text @unique
    }

    operations {
        get getMyModel() {
            @where(myModel.nonUnique == "something")
            @where(myModel.code == "sdsd")
        }
    }
}