schema/testdata/errors/get_operation_no_unique_lookup_in_wheres.keel
model MyModel {
    fields {
        nonUnique Text
    }

    actions {
        //expect-error:13:23:ActionInputError:The action 'getMyModel' can only get a single record and therefore must be filtered by unique fields
        get getMyModel() {
            @where(myModel.nonUnique == "something")
        }
    }
}
